# garage

./: .gitignore  .goreleaser.yaml  .swaggo  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  conf.yaml  config.yaml  crawl.go  crawl_test.go  go.mod  go.sum  javbus.go  main.go  main.ts  nodemon.json  package.json  taskfile.yaml  template.env  tsconfig.json  tsconfig.serve.json  tslint.json
.devcontainer/: devcontainer.json
.env/: template.env
.github/workflows/: release.yml  release_rs.yml  test.yml
api/: api.go  handle.go  handle_version.go  middleware.go  resp.go  route.go
batch/: ffmpeg.go  ffmpeg_test.go
cli/: main.go
cli/command/: crawl.go  crawl_flag.go  flag.go  logger.go  root.go  version.go
cmd/: code.go  crawl_code.go  flag.go  jav_code.go  jav_prefix_code.go  jav_star.go  prefix.go  root.go  star.go  sync.go  version.go  video_convert.go  video_extract_subtitle.go  video_import_subtitle.go  video_subtitle.go
cmd/ffmpeg_cmd/: flag.go  video_convert.go  video_extract_subtitle.go  video_import_subtitle.go
cmd/jav_cmd/: code.go  prefix_code.go  star.go
command/: api.go  code.go  crawl.go  crawl_flag.go  dashboard.go  dashboard_flag.go  flag.go  prefix.go  root.go  scrapy.go  star.go  sync.go  version.go
core/: main.ts  menu.ts  subject.go
crawl/: crawl.go  init.go  javbus.go  logger.go
dao/: init.go  jav_movie.go  jav_star.go  jav_tag.go  subject.go
db/: init.go  mysql.go  postgre_sql.go  sqlite.go
dev/: minio.compose.yaml
di/: app.go  wire.go  wire_gen.go
docs/: CHANGELOG-v0.md  crawl.md  ffmpeg.md  ffmpeg_rs.md  server.md  swagger.yaml
ffmpeg/: ffmpeg.go
garage/: Cargo.toml
garage-cli/: Cargo.toml
garage-cli/src/: cmd.rs  ffmpeg.rs  jav.rs  main.rs  spider.rs
garage-cli/src/cmd/: ffmpeg.rs  jav.rs  mod.rs  tenhou.rs
garage-cli/src/jav/: db_bf.rs  mod.rs
garage-cli/src/utils/: logger.rs  mod.rs
garage-ffmpeg/: Cargo.toml  ffmpeg.go  ffmpeg_test.go
garage-ffmpeg/src/: args.rs  lib.rs  option.rs
garage-ffmpeg_rs/src/: option.rs
garage-gui/: .gitignore  package.json  vite.config.ts
garage-gui/src-tauri/: Cargo.toml  tauri.conf.json
garage-jav/: Cargo.toml
garage-jav/model/: model.go
garage-jav/src/: crawl.rs  db_sync.rs  lib.rs  model.rs
garage-spider/: Cargo.toml
garage-tenhou/: Cargo.toml
garage-tenhou/src/: config.rs
garage-ui/: package.json  tsconfig.json  ui.go  vite.config.ts
garage-ui/src/: App.vue  main.ts  style.less  theme.ts
garage-ui/src/api/: user.ts
garage-ui/src/components/: HelloWorld.vue
garage-ui/src/layout/: DashboardLayout.vue
garage-ui/src/router/: index.ts
garage-ui/src/stores/: index.ts  layout.ts
garage-ui/src/utils/: http.ts
garage/src/: db_bf.rs
garage_cmd/: crawl.go  crawl_jav.go  crawl_javdb.go  crawl_tenhou.go  ffmpeg.go  main.go  server.go  version.go
garage_di/: app.go  wire.go  wire_gen.go
garage_ffmpeg/: ffmpeg.go  ffmpeg_test.go
garage_jav/: crawl.go  jav.go  javbus.go  javdb.go  model.go  task.go
garage_server/: main.go
garage_server/dao/: init.go  test.go
garage_server/db/: init.go  task.go
garage_server/db/database/: driver.go  init.go  movie.go
garage_server/db/sqlite/: actor.go  anime.go  movie.go  movie_actor.go  movie_star.go  movie_tag.go  movie_test.go  sqlite.go  sqlite_test.go  star.go  tag.go
garage_server/di/: app.go  wire.go  wire_gen.go
garage_server/errno/: code.go  errno.go
garage_server/handler/: actor.go  anime.go  crawl_handler.go  ffmpeg_handler.go  image.go  init.go  jav_handler.go  movie.go  movie_actor.go  movie_star.go  movie_tag.go  ping.go  ping_handler.go  star.go  tag.go  websocket.go
garage_server/middleware/: init.go  req.go  websocket.go
garage_server/model/: actor.go  anime.go  movie.go  movie_actor.go  movie_star.go  movie_tag.go  star.go  tag.go
garage_server/resp/: init.go
garage_server/router/: init.go
garage_server/routes/: api.go  init.go  web.go
garage_server/service/: actor.go  anime.go  init.go  movie.go  movie_actor.go  movie_star.go  movie_tag.go  ping.go  star.go  tag.go  task_service.go  test_service.go
garage_server/storage/: init.go  local.go  minio.go
garage_server/task/: task.go  task_ffmpeg.go  task_javbus.go  task_mgr.go
garage_task/: README.md  task.go  task_mgr.go  task_test.go
garage_tenhou/: model.go
garage_web/: embed.go  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
garage_web/src/: App.vue  main.ts  style.scss
garage_web/src/api/: actor.ts  anime.ts  movie.ts  movie_actor.ts  movie_tag.ts  tag.ts
garage_web/src/components/: Dropdown.vue
garage_web/src/composables/: toast.ts
garage_web/src/directive/: tooltip.ts
garage_web/src/layout/: Root.vue  Sidebar.vue
garage_web/src/locales/: en-US.json  i18n.ts  zh-CN.json
garage_web/src/pages/: Actor.vue  Anime.vue  Movie.vue  Setting.vue  Tag.vue  TagTree.vue
garage_web/src/router/: index.ts
garage_web/src/stores/: movie.ts
garage_web/src/themes/: common.scss  common_button.scss  common_dropdown.scss  common_menu.scss  common_modal.scss  multi_select.scss  oneDark.scss  (+3 more)
jav/: crawl.go
jav-collect/: Cargo.toml
model/: jav_movie.go  jav_movie_star.go  jav_movie_tag.go  jav_star.go  jav_star_code.go  jav_tag.go  model.go  star.go  subject.go  subject_star.go
proto/: task.proto
ruspider/: Cargo.toml  LICENSE  README.md
ruspider/src/: element.rs  lib.rs  queue.rs  spider.rs
src/: index.html  main.go  styles.less
src/app/: app.component.less  app.component.ts
src/batch/: ffmpeg.go  ffmpeg_test.go
src/cmd/: crawl.go  crawl_jav.go  ffmpeg.go  root.go  version.go
src/crawl/: crawl.go  javbus.go  model.go  save.go  save_test.go
src/di/: wire.go
src/jav/: crawl.go  javbus.go  model.go  save.go  save_test.go
src/model/: javbus.go
src/service/: jav_config.go  jav_model.go  javbus.go
src/utils/: dest.go  dir.go  image.go
utils/: config.go  config_test.go  dest.go  dist.go  file.go  file_test.go  init.go  logger.go  validator.go  validator_test.go  version.go
web/: README.md  angular.json  karma.conf.js  package.json
(+22 files in other folders)
