[workspace]
members = [
    "garage-jav",
    "garage-ffmpeg",
    "garage-tenhou",
    "garage-cli",
    "garage-spider",
    "ruspider",
]

[workspace.package]
name = "garage"
version = "0.1.0"
edition = "2021"
authors = ["gsxhnd"]
homepage = ""
description = ""
repository = "https://github.com/gsxhnd/garage"
license = "MIT license"
categories = ["network"]
keywords = [""]
exclude = [".gitignore", ".cargo/config"]
rust-version = "1.72"

[path]
garage_jav = { path = "garage-jav" }
garage_ffmpeg = { path = "garage-ffmpeg" }
garage_cli = { path = "garage-cli" }
garage_spider = { path = "garage-spider" }
garage_tenhou = { path = "garage-tenhou" }
ruspider = { path = "ruspider" }

[workspace.dependencies]
axum = { version = "0.6" }
bytes = { version = "1.4", features = ["serde"] }
clap = { version = "4.3", features = ["derive", "env"] }
futures = { version = "0.3" }
futures-util = { version = "0.3" }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
sea-query = "0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1.14"
tokio-tungstenite = { version = "0.19" }
tracing = { version = "0.1" }
tracing-subscriber = "0.3"
walkdir = "2"
