[package]
name = "garage_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true
rust-version.workspace = true


[dependencies]
garage_jav = { path = "../garage-jav" }
garage_ffmpeg = { path = "../garage-ffmpeg" }
ruspider = { path = "../ruspider" }

clap = { workspace = true, features = ["derive", "env"] }
log = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
sea-query = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
