[package]
name = "garage_jav"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true
rust-version.workspace = true


[lib]
name = "garage_jav"
path = "src/lib.rs"
edition = "2021"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
sea-orm = { workspace = true }
sea-query = { workspace = true }
scraper = "0.18"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
