[package]
name = "garage_tenhou"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true
rust-version.workspace = true


[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
