[package]
name = "jav_collect"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jav_collect"
path = "src/main.rs"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
axum = "0.6"
