[package]
name = "ruspider"
version = "0.1.0"
edition = "2021"

[lib]
name = "ruspider"
path = "src/lib.rs"
edition = "2021"
crate-type = ["rlib", "cdylib", "staticlib"]


[dependencies]
scraper = "0.18"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
